# simulation

./: .gitattributes  CMakeLists.txt  README.md  package.xml
assets/Environments/InternationalSpaceStation/: InternationalSpaceStation.usd  InternationalSpaceStationInternal.usd
assets/Environments/Mars/: MarsEnvironment.usd
assets/Environments/Moon/: MoonEnvironment.usd
assets/Environments/Props/: EarthModel.usd
assets/Robots/Curiosity_Mars_Rover/: CuriosityMarsRover.usd
assets/Robots/Ingenuity_Helicopter/: IngenuityV3.usd
assets/Robots/JPL_Athlete/: T12.usd  TriATHLETE.usd  TriATHLETE_Climbing.usd
assets/Robots/Perseverance_Rover/: PerseveranceRover.usd  perseverance-wheels.usd
assets/Robots/Robonaut2/: Robonaut2.usd  Robonaut2UpperBody.usd
assets/Robots/SSRMS_Canadarm2/: Canadarm1.usd  Canadarm17DoF.usd  SSRMS_Canadarm2.usd
assets/Scenes/: InternationalSpaceStationCanadarm2.usd  MarsEnvironment.usd  MoonEnvironment.usd  Robonaut2Manipulation.usd  SimpleIngenuityHelicopterScene.usd
assets/Sky/: MarsClearSky.usd
curiosity_nvidia_isaac/: README.md
curiosity_nvidia_isaac/documents/docs/: action_graph.md
curiosity_nvidia_isaac/isaac_assets/roverv1/: roverv1.usd
docs/: action_graph.md  ros2.md
docs/assets/: environments.md  robots.md  scenes.md
docs/extensions/: index.md  negate-number.md  rover-simle-controller.md
docs/robots/: canadarm2.md  curiosity.md  ingenuity-helicopter.md  robonaut2.md
extensions/omni.new.extension/config/: extension.toml
extensions/omni.new.extension/docs/: CHANGELOG.md  README.md
extensions/omni.new.extension/omni/new/extension/: __init__.py
extensions/omni.spaceros.roversimplecontroller/config/: extension.toml
extensions/omni.spaceros.roversimplecontroller/docs/: README.md
models/HDU/: README.txt  model.config  model.sdf
models/HDU/meshes/: HDU1.dae  HDU2.dae
models/Lunar_lander/: model.config  model.sdf
models/Lunar_lander/meshes/: Lunar lander.dae
models/MMSEV/: model.config  model.sdf
models/MMSEV/meshes/: MMSEV.mtl
models/apollo15_landing_site_1000x1000/: model-1_4.sdf
models/apollo15_landing_site_1000x1000_modified/: model-1_4.sdf  model.config
models/apollo_lunar_module/: model.config  model.sdf
models/canadarm/meshes/: earth.dae  earth.stl  ee.dae  ee.stl  iss.dae  iss.stl  joint_combine_link3.stl  joint_v3_0.dae  joint_v3_0.stl  link_joint.stl  link_joint_v2_1.dae  link_joint_v2_1.stl  long_link_1_v3_0.dae  long_link_1_v3_0.stl  long_link_2.stl  long_link_2_v3_0.dae  long_link_2_v3_0.stl  long_link_v2_1_curr.stl
models/canadarm/urdf/: SSRMS_Canadarm2.gazebo.xacro  SSRMS_Canadarm2.urdf  SSRMS_Canadarm2.urdf.xacro
models/curiosity_path/: model.sdf
models/curiosity_path/meshes/: CuriosityQR.stl  MSL_dirty_mod_chassis.dae  MSL_dirty_mod_chassis_fixed.dae  MSL_dirty_mod_chassis_stuff.dae  MSL_dirty_mod_chassis_stuff_fixed.dae  MSL_dirty_mod_chassis_stuff_joint_fixed.dae  MSL_dirty_mod_chassis_stuff_joint_fixed_v2.dae  arm_01.dae  arm_01_fixed.dae  arm_02.dae  arm_02_fixed.dae  arm_02_fixed2.dae  arm_03.dae  arm_03_fixed.dae  arm_04.dae  arm_04_fixed.dae  arm_tools.dae  arm_tools_fixed.dae  chassis_full.dae  chassis_full_fixed.dae  chassis_full_fixed_glitch.dae  chassis_full_fixed_glitch_v2.dae  chassis_full_fixed_v1.dae  chassis_full_fixed_v2.dae  left_axis.dae  left_axis_jointfix.dae  left_axis_jointfix_v2.dae  mast_02.dae  mast_02_fixed.dae  mast_cameras.dae  mast_p.dae  mast_p_fixed.dae  right_axis.dae  right_axis_jointfix.dae  right_axis_jointfix_v2.dae  suspension_arm_B2_L.dae  suspension_arm_B2_L_fixed.dae  suspension_arm_B2_R.dae  suspension_arm_B2_R_fixed.dae  suspension_arm_B_L.dae  (+17 more)
models/curiosity_path/urdf/: arm.xacro  chassis.xacro  curiosity_mars_rover.gazebo  curiosity_mars_rover.xacro  curiosity_mars_rover.xacro.urdf  left_wheel_group.xacro  right_wheel_group.xacro  sensor_mast.xacro  wheel.xacro
models/fog/: model.config  model.sdf
models/ingenuity/meshes/dae/: 10460522-1_2_B1-SOLAR PANEL SUBSTRATE_5781_FILLET5.003.dae  Cube.002.dae  Cube.012.dae  Cylinder.005.dae  Cylinder.014.dae  Cylinder.017.dae  Cylinder.019.dae  Cylinder.028.dae  Cylinder.035.dae  MHP_JR_AV_ROTOR_STOWED_120717_A1-STOWED ROTOR ASSEMBLY, 120.027.dae  MHP_JR_AV_ROTOR_STOWED_120717_A1-STOWED ROTOR ASSEMBLY, 120.056.dae
models/ingenuity/sdf/: model.config  model.sdf
models/ingenuity/urdf/: ingenuity.urdf
models/jezero_crater/: model.config  model.sdf
models/lunar/: model.config  model.sdf
models/lunar/materials/scripts/: gazebo.material
models/lunar/meshes/: lunar_surface.dae  lunar_surface.stl  untitled.dae
models/lunar_pole_exploration_rover/meshes/: body.dae  chassis.dae  mast_camera.dae  mast_head_pivot.dae  solar_panel.dae  suspension_left.dae  suspension_right.dae  wheel_axle_left.dae  wheel_axle_right.dae  wheel_left.dae  wheel_right.dae
models/lunar_pole_exploration_rover/urdf/: chassis.xacro  lunar_pole_exploration_rover.gazebo  lunar_pole_exploration_rover.xacro  lunar_pole_exploration_rover_properties.xacro  mast_head.xacro  wheel.xacro  wheel_assembly.xacro
models/lunar_roving_vehicle/: model.config  model.sdf
models/lunar_roving_vehicle/meshes/: lunar_roving_vehicle.dae  wheel_cover_L_B.dae  wheel_cover_L_F.dae  wheel_cover_R_B.dae  wheel_cover_R_F.dae  wheel_cover_l_B.dae
models/lunar_terrain/models/moon_dem/meshes/: Earth.dae  (+1 more)
models/lunar_terrain/world/meshes/: Sun.dae
models/moon_mons_mouton/: model.config  model.sdf
plugins/: RadioisotopeThermalGeneratorPlugin.cc  RadioisotopeThermalGeneratorPlugin.hh  RechargeableBatteryPlugin.cc  RechargeableBatteryPlugin.hh  SensorPowerSystemPlugin.cc  SensorPowerSystemPlugin.hh  SolarPanelPlugin.cc  SolarPanelPlugin.hh
plugins/atmosphere/include/: AtmosphereModel.hpp  AtmospherePlugin.hpp
plugins/atmosphere/src/: AtmosphereModel.cpp  AtmospherePlugin.cpp
plugins/rotor/include/: BladeFlappingModel.hpp  BladeForceModel.hpp  ConfigClasses.hpp  DataClasses.hpp  InflowModel.hpp  Matrix.hpp  RotorPlugin.hpp
plugins/rotor/src/: BladeFlappingModel.cpp  BladeForceModel.cpp  InflowModel.cpp  Matrix.cpp  RotorPlugin.cpp
(+7 files in other folders)
